--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Teko:wght@300;500&display=swap');
 
 .container-fluid {
-    padding: 0px;
+    padding: 0;
 }
 
 a {
@@ -26,11 +26,8 @@ a {
 
 .btn-info {
     background-color: #E4291B;
-    color: #fff;
     border: none;
-    font-family: 'Oswald', sans-serif;
     font-size: medium;
-    text-transform: uppercase;
     padding: 15px 32px;
 }
 
@@ -38,35 +35,21 @@ a {
     background-color: #E4291B;
 }
 
-h1 {
+.carousel-recipe {
     margin-top: 10px;
     margin-bottom: 30px;
     text-shadow: darkgrey 0 0 2px;
 }
 
-h2 {
+.heading {
     margin-top: 30px;
     margin-bottom: 20px;
 }
 
-.crop {
-    object-fit: none;
-    object-position: center;
-    width: 100%;
-    height: 330px;
-
-    border-radius: 12px;
-}
-
-.img-fluid {
-    max-width: 100%;
-    height: 330px;
-}
-
 .footer {
     background-color: #30302F;
-    padding-bottom: 14px;
-    padding-top: 14px;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .footer-text {
@@ -77,6 +60,27 @@ h2 {
     color: #E4291B;
 }
 
-.copyright {
+hr {
+    color: darkgrey;
+}
+
+.footer-widgets {
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.bi {
     color: #fff;
+}
+
+.copyright {
+    color: darkgrey;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.uppercase {
+    color: #fff;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
 }
